tests/negative/neg_pr1111b_interface_member_no_receiver.safe
package neg_pr1111b_interface_member_no_receiver

   type printable is interface
      function label returns string
